# baza_znaniy_ai

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  TEST_RESULTS.md  alembic.ini  compose.api.yml  compose.gpu.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml  email_validator.py  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-llm.txt  requirements-runtime.txt  requirements-train.txt  requirements.txt
.github/workflows/: blank.yml  ci.yml  lora.yml  tests.yml
alembic/: env.py
alembic/versions/: 20240919_01_initial_schema.py  20260503_01_target_data_model.py  20260503_02_billing_policy_usage.py  20260503_03_npa_fields.py  20260506_01_api_keys_usage_rag.py  20260522_01_audit_log.py  20260522_02_pdf_citation.py
app/: __init__.py  _module_reset.py  auth.py  database.py  ingest.py  main.py  ollama_client.py  qdrant_client.py  requirements.txt  security.py  supervisord.conf
app/api/: __init__.py  error_responses.py  kb_auth.py  kb_feedback.py  kb_mvp.py  main.py  router.py  routes.py  routes_lora.py  status_codes.py  upload_policies.py  upload_utils.py
app/chat/: __init__.py  postgres_store.py  store.py  summarizer.py
app/core/: app.py  audit.py  audit_db.py  audit_middleware.py  auth.py  config.py  (+5 more)
data/: nginx.conf
docs/: ai_kb_architecture.md  architecture.md  database_blueprint.md  integrations_review.md  legacy_README.md  observability_slo.md  openapi.yaml  release_checklist.md  runbook_incidents.md
docx/: __init__.py  api_code_style.md
dotenv/: __init__.py
fastapi/: __init__.py  security.py  testclient.py
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.setup.ts
models/: .gitkeep  model.gguf  model_manifest.json
pydantic/: __init__.py  json.py  version.py
pypdf/: __init__.py
scripts/: __init__.py  _lora_artifacts.py  bench_reranker.py  build_curated_golden.py  build_frozen_embeddings.py  build_mrtydi_pairs.py  build_pravo_golden.py  build_pravo_pairs.py  build_public_corpus.py  build_rerank_dataset.py  check_mypy_ratchet.py  check_rerank_leak.py  convert_lora_to_gguf.py  dev_server_mvp.py  download_model.py  eval_lora.py  eval_rag.py  eval_sweep.py  export_all.py  freeze_pravo_eval.py  generate_dpo_pairs.py  generate_rag_dataset.py  generate_synthetic_qa.py  import_all.py  ingest_path.py  ingest_pravo.py  kb_cli.py  quantize_reranker.py  rebuild_index.py  run_mvp_pravo.ps1  run_reranker_gpu.py  sweep_rerank_candidates.py  train_dpo.py  train_lora.py  train_reranker.py  validate_dataset.py
tests/: __init__.py  conftest.py  demo_assets.py  service_stubs.py  test_acceptance.py  test_admin_audit_endpoint.py  test_api_auth.py  test_api_document_ids.py  test_api_key_auth.py  test_api_lora.py  test_api_ops.py  test_api_pipeline.py  test_api_provider.py  test_api_status_codes.py  test_api_upload_coercion.py  test_api_upload_rate_limit.py  test_api_v1_chat_retrieval.py  test_api_v1_ops_retrieval.py  test_api_v1_search.py  test_api_v1_upload.py  test_app_entrypoint.py  test_app_ollama_client.py  test_apportion_counts_generic.py  test_audit_db.py  test_audit_helpers.py  test_audit_middleware.py  test_audit_model.py  test_auth_change_password.py  test_auth_disabled_semantics.py  test_candidate_sweep.py  test_chat_citations.py  test_chat_formatting.py  test_chat_llm_integration.py  test_chat_storage.py  test_chat_storage_postgres.py  test_check_mypy_ratchet.py  test_citation_rendering_html.py  test_compose_profiles.py  test_config_audit_retention.py  test_config_env_aliases.py  (+142 more)
(+433 files in other folders)
