[project]
name = "kb-ai"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-runtime.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
llm = { file = ["requirements-llm.txt"] }
train = { file = ["requirements-train.txt"] }
dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]
