[project]
name = "kb-ai"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
kb-cli = "scripts.kb_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
exclude = ["tests*", "backend*", "frontend*", "data*", "var*", "ops*", "srv*", "docx*", "models*", "alembic*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-runtime.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
llm = { file = ["requirements-llm.txt"] }
train = { file = ["requirements-train.txt"] }
dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "^/backend/"

[tool.ruff]
line-length = 100
extend-exclude = ["backend"]

[tool.ruff.lint]
ignore = ["E402"]
