[project]
name = "kb-ai"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
kb-cli = "scripts.kb_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
exclude = ["tests*", "frontend*", "data*", "var*", "ops*", "srv*", "docx*", "models*", "alembic*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-runtime.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
llm = { file = ["requirements-llm.txt"] }
train = { file = ["requirements-train.txt"] }
dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
# Third-party libraries we depend on that don't ship type stubs.
# Telling mypy to skip them removes ~70 "import-not-found" / "import-untyped"
# errors from the report so the remaining errors are real type problems.
# Re-evaluate this list whenever an upstream library publishes ``py.typed``.
# Mypy treats ``foo.*`` as "submodules of foo" only — list ``"foo"`` AND
# ``"foo.*"`` for libraries we import both bare and as submodules.
[[tool.mypy.overrides]]
module = [
    "apscheduler", "apscheduler.*",
    "boto3", "boto3.*",
    "botocore", "botocore.*",
    "celery", "celery.*",
    "datasets",
    "evaluate",
    "html2text",
    "huggingface_hub",
    "jose", "jose.*",
    "langchain", "langchain.*",
    "langchain_core", "langchain_core.*",
    "llama_cpp", "llama_cpp.*",
    "markdown",
    "openpyxl",
    "passlib", "passlib.*",
    "pdfminer", "pdfminer.*",
    "peft",
    "PIL", "PIL.*",
    "pptx", "pptx.*",
    "pypdf",
    "pypdfium2",
    "pytesseract",
    "pytest_postgresql",
    "qdrant_client", "qdrant_client.*",
    "sentence_transformers",
    "sse_starlette", "sse_starlette.*",
    "tensorboard",
    "tensorboardX",
    "tiktoken",
    "torch",
    "transformers", "transformers.*",
    "yaml",
]
ignore_missing_imports = true
